--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,26 @@
 body {
-    height: 100%;
-    background-color: black;
+    height: 50%;
+
 }
 
-.hero-image {
-    border: 2px solid black;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/assets/images/379770-PC477B-889.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.hero {
     position: relative;
+    content: "";
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url("../images/background.jpg") no-repeat center center fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    
+ }
 
-}
 
-.search-bar {
-    text-align: center;
-    transform: translate(-50%, -50%);
-}
-
+ .hero-content {
+    position: relative;
+ }
