--- a/assets/css/result.css
+++ b/assets/css/result.css
@@ -3,8 +3,16 @@
   padding:0;
 }
 
+#nav-bar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 39px;
 }
 
 .img {
