--- a/assets/css/result.css
+++ b/assets/css/result.css
@@ -17,7 +17,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 39px;
-  background: url("../images/background.jpg") no-repeat center center fixed;
+  background: url("../images/Background.jpg") no-repeat center center fixed;
   background-repeat: no-repeat;
   background-position: center center;
 }
