--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../images/background.jpg") no-repeat center center fixed;
+    background: url("../images/Background.jpg") no-repeat center center fixed;
     background-repeat: no-repeat;
     background-position: center center;
     top: 0;
