--- a/assets/css/result.css
+++ b/assets/css/result.css
@@ -3,6 +3,10 @@
   padding:0;
 }
 
+#title {
+  padding-left: 25px;
+}
+
 #nav-bar {
   position: fixed;
   top: 0;
@@ -11,7 +15,7 @@
 }
 
 #cards {
-  margin-top: 40px;
+  margin: 20px 20px;
 }
 
 body {
@@ -22,13 +26,10 @@ body {
   background-position: center center;
 }
 
-.img {
-  height: 500px;
-  width: 500px;
-}
-
 p > img {
   height: 22.5rem;
   width: 18rem;
+  padding: 10px 10px;
+  overflow: hidden;
 }
 
